<resources>
    <string name="app_name">Wallpapers</string>

    <!-- Home Fragment  -->
    <string name="tit_choose_theme">Choose Theme</string>
    <string name="tit_white_theme">White Theme</string>
    <string name="tit_black_theme">Black Theme</string>
    <string name="tit_color_theme">Color Theme</string>

    <string name="msg_choose_theme">What kind of wallpapers do you prefer</string>
    <string name="msg_white_box">You prefer light wallpapers?</string>
    <string name="msg_black_box">You prefer dark wallpapers?</string>
    <string name="msg_color_box">You prefer colored wallpapers?</string>


    <!-- Settings -->
    <string name="tit_settings">Settings</string>
    <string name="tit_app_info">App Info</string>
    <string name="tit_general">General</string>
    <string name="tit_back">Back</string>
    <string name="tit_submit">Submit</string>
    <string name="tit_daily_new_wallpaper">Daily New Wallpaper</string>
    <string name="tit_wifi_only">WiFi Only</string>
    <string name="tit_about_us">About Us</string>
    <string name="tit_feedback">Feedback</string>

    <string name="msg_wifi_only">Download wallpapers only when the device is connected to WiFi</string>
    <string name="msg_daily_new_wallpaper">Turn ON to receive new wallpaper daily</string>
    <string name="msg_feedback">Do you have any suggestion for developers?</string>


    <!-- General text   -->
    <string name="tit_version">Version</string>
    <string name="msg_version">1.0.1</string>

    <string name="tit_notification_tray">Updating Wallpaper</string>
    <string name="msg_notification_tray">"Wallpaper is updating..."</string>


    <!--    App Intro   -->
    <string name="tit_how_to_use">How To Use</string>
    <string name="msg_how_to_use">In the next few slides, you will learn how to get the best out of this app</string>
    <string name="tit_intro_choose_theme">Choose Theme</string>
    <string name="msg_intro_choose_theme">Choose whether you like dark, light or colored wallpapers</string>
    <string name="tit_daily_wallpaper">Daily Wallpapers</string>
    <string name="msg_daily_wallpaper">Once you select a theme, everyday you will get an amazing HD wallpaper</string>
    <string name="tit_unlimited_wallpapers">Unlimited Wallpapers</string>
    <string name="msg_unlimited_wallpapers">Best images are daily selected from a collection of unlimited for your device wallpaper</string>
    <string name="tit_customization">Customization</string>
    <string name="msg_customization">You can stop auto-daily wallpaper changing from settings. It also provides other customizations</string>

</resources>
