<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_title"

            style="@style/tv_title"
            android:layout_marginTop="24dp"
            android:text="@string/tit_choose_theme"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_sub_title"

            style="@style/tv_sub_title"
            android:text="@string/msg_choose_theme"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />


        <ImageView
            android:id="@+id/view_white_theme"

            style="@style/view_box"
            android:layout_marginTop="36dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_white"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_title" />


        <TextView
            android:id="@+id/tv_white_theme"

            style="@style/tv_box_msg"
            android:text="@string/msg_white_box"

            app:layout_constraintBottom_toBottomOf="@+id/view_white_theme"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/view_black_theme"

            style="@style/view_box"
            android:layout_marginTop="24dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_black"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_white_theme" />


        <TextView
            android:id="@+id/tv_black_theme"

            style="@style/tv_box_msg"
            android:text="@string/msg_black_box"
            android:textColor="@android:color/white"

            app:layout_constraintBottom_toBottomOf="@+id/view_black_theme"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView

            android:id="@+id/view_colored_theme"

            style="@style/view_box"
            android:layout_marginTop="24dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_colored"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_black_theme" />

        <TextView
            android:id="@+id/tv_colored_theme"

            style="@style/tv_box_msg"
            android:text="@string/msg_colored_box"

            app:layout_constraintBottom_toBottomOf="@+id/view_colored_theme"
            app:layout_constraintStart_toStartOf="parent" />



        <!--setting icon -->
        <ImageView
            android:id="@+id/img_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"

            android:src="@drawable/ic_settings"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_colored_theme" />


        <TextView
            android:id="@+id/tv_settings"

            style="@style/tv_sub_title"
            android:text="@string/tit_settings"
            android:textColor="@color/color_black_shade2"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>